# ini2csv

./:  pyproject.toml  .gitignore  INItoCSV.py  README.md  setup.cfg  setup.py  test.csv
ini2csv/: __init__.py  ini2csv.py
ini2csv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: INItoCSV.py
src/initocsv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
