[metadata]
name = ini2csv
version = attr: ini2csv.version.__version__
author = Soumil Datta
author_email = soumildatta@email.com
keywords = ini, csv, data-processing, data-cleaning, data-science

# add a description of your package
description = A simple utility that converts and combines a folder of .ini files with identical keys into one csv file.
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/soumildatta/ini2csv/tree/v1.0.0
download_url = https://github.com/soumildatta/ini2csv/releases/tag/v1.0.0

# define your license and license file
license = MIT
license_files = LICENSE

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers      
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8